[gd_scene load_steps=5 format=3 uid="uid://b7dt4tpb0fxj4"]

[ext_resource type="Script" path="res://scene/core/ui-inputs.gd" id="1_ygl12"]
[ext_resource type="PackedScene" uid="uid://ckp3hw4btpj7n" path="res://scene/cube.tscn" id="2_y145n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi301"]
size = Vector2(214, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5a8j"]
size = Vector2(47, 39)

[node name="Inputs" type="Node2D"]
script = ExtResource("1_ygl12")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="space" type="Node2D" parent="."]
position = Vector2(125, 50)
metadata/_edit_group_ = true

[node name="Background" parent="space" instance=ExtResource("2_y145n")]
scale = Vector2(21, 3)

[node name="SpaceKey" parent="space" instance=ExtResource("2_y145n")]
position = Vector2(0, -5)
scale = Vector2(20, 3)
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="SpaceArea" type="Area2D" parent="space"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="space/SpaceArea"]
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_wi301")

[node name="left" type="Node2D" parent="."]
position = Vector2(422, 50)
metadata/_edit_group_ = true

[node name="Background" parent="left" instance=ExtResource("2_y145n")]
scale = Vector2(5, 3)

[node name="LeftKey" parent="left" instance=ExtResource("2_y145n")]
position = Vector2(0, -5)
scale = Vector2(4, 3)
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="LeftArea" type="Area2D" parent="left"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left/LeftArea"]
position = Vector2(0.5, -5.5)
shape = SubResource("RectangleShape2D_w5a8j")

[node name="right" type="Node2D" parent="."]
position = Vector2(535, 50)
metadata/_edit_group_ = true

[node name="Background" parent="right" instance=ExtResource("2_y145n")]
scale = Vector2(5, 3)

[node name="RightKey" parent="right" instance=ExtResource("2_y145n")]
position = Vector2(0, -5)
scale = Vector2(4, 3)
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="RightArea" type="Area2D" parent="right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right/RightArea"]
position = Vector2(0.5, -5.5)
shape = SubResource("RectangleShape2D_w5a8j")

[connection signal="input_event" from="space/SpaceArea" to="." method="_on_space_area_input_event"]
[connection signal="input_event" from="left/LeftArea" to="." method="_on_left_area_input_event"]
[connection signal="input_event" from="right/RightArea" to="." method="_on_right_area_input_event"]
